syntax = "proto3";

package shopping-cart;

service ShoppingCartService {
    rpc GetItems() returns (ShoppingCarts) {}
    rpc Addtem(AddItemDto) returns (ShoppingCart) {}
}

message AddItemDto {
    string name = 1;
    double price = 2;
}

message ShoppingCart {
    string id = 1;
    string name = 2;
    double price = 3;
}

message ShoppingCarts {
    repeated ShoppingCarts shoppingCarts = 1;
}